# binance-spot-loader

./: Dockerfile  README.md  pyproject.toml  requirements.txt
db/: db.sql  latest_spot.sql  latest_spot_1m.sql  spot_1h.sql  spot_1h_id.sql  spot_1h_latest.sql  spot_1m.sql
src/binance_spot_loader/: __init__.py  __main__.py  date_helpers.py
src/binance_spot_loader/model/: __init__.py  base.py  entity.py  kline.py  latest.py
src/binance_spot_loader/persistence/: source.py  target.py
src/binance_spot_loader/queries/: __init__.py  base.py  latest_spot_1h.py  latest_spot_1m.py  spot_1h.py  spot_1h_latest.py  spot_1m.py
