[tool.poetry]
name = "binance-spot-loader"
version = "0.1.0"
description = ""
authors = ["tomas-juhos <120075334+tomas-juhos@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "binance_spot_loader"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
